# turbozero

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
.agent/rules/: GEMINI.md
FastSVERL/: main.tex  references.bib  sverl-notation.sty
FastSVERL/sections/: 0_abstract.tex  0_acknowledgements.tex  0_checklist.tex  1_introduction.tex  2_background.tex  3_fastsverl.tex  4_extending_fastsverl.tex  5_sampling.tex  6_related_work.tex  7_discussion.tex  A_fastsverl_shapleys.tex  B_fastsverl_characteristics.tex  C_fastsverl_evaluation.tex  D_off_policy.tex  E_parallel.tex  F_sampling.tex  G_domains.tex  H_experiment_setup.tex
KataGo--TEX/: Accelerating_Self_Play_Learning_In_Go_2020.bbl  Accelerating_Self_Play_Learning_In_Go_2020.bib  Accelerating_Self_Play_Learning_In_Go_2020.tex
core/: common.py  types.py
core/evaluators/: alphazero.py  evaluation_fns.py  evaluator.py  shapley_eval.py  visualizer.py
core/memory/: replay_memory.py
core/networks/: azresnet.py  katago.py  shapley.py
core/testing/: elo_tester.py  (+4 more)
notebooks/: hello_world.ipynb  weighted_mcts.ipynb
scripts/: compare_shapley_models.py  download_katago_checkpoint.sh  download_katago_data.sh  log_dataset_stats.py  prepare_alphago_game2.sh  prepare_katago_npz.py  sgf_to_trajectory.py  train_parallel.py  train_shapley.py  validate--train-eval-wandb-separate.sh  validate--train-eval-wandb-strict.sh  validate--train-eval-wandb.sh
src/: shapley.py  train.py
tests/: test_checkpoint_resume.py  test_importance_sampling.py  test_katago_loss.py  test_katago_offline.py  test_katago_params.py  test_katago_shapes.py  test_shapley_alignment.py  test_shapley_dataloader.py  test_shapley_evals.py  test_shapley_loss.py  test_shapley_mask_sampling.py  test_shapley_masking.py  test_shapley_models.py  test_shapley_trainer_utils.py
(+13 files in other folders)
