[project]
name = "turbozero"
version = "0.1.1"
description = "vectorized alphazero/mcts in JAX"
authors = [
    { name = "lowrollr", email = "92640744+lowrollr@users.noreply.github.com" },
]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "graphviz>=0.20.1,<0.21",
    "wandb>=0.18.6,<0.19",
    "jax==0.4.34",
    "jax[cuda12-pip]==0.4.34 ; sys_platform == 'linux'",
    "jaxlib==0.4.34",
    "flax>=0.8.4,<0.9",
    "optax>=0.1.8,<0.2",
    "orbax-checkpoint>=0.10.1,<0.11",
    "chex>=0.1.85,<0.2",
    "pgx>=2.0.1,<3",
    "dm-haiku>=0.0.12,<0.0.13",
    "cairosvg>=2.7.1,<3",
    "pip>=25.3",
    "ipykernel>=6.29.5",
    "notebook>=7.5.1",
    "tyro>=1.0.3",
    "nvidia-cuda-nvcc-cu12~=12.8.0 ; sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12~=12.8.0 ; sys_platform == 'linux'",
    "nvidia-cublas-cu12~=12.8.0 ; sys_platform == 'linux'",
    "nvidia-cudnn-cu12~=9.16.0 ; sys_platform == 'linux'",
    "nvidia-cufft-cu12~=11.3.0 ; sys_platform == 'linux'",
    "nvidia-cusolver-cu12~=11.6.0 ; sys_platform == 'linux'",
    "nvidia-cusparse-cu12~=12.4.0 ; sys_platform == 'linux'",
    "nvidia-nccl-cu12~=2.27.0 ; sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12~=12.8.0 ; sys_platform == 'linux'",
]

[dependency-groups]
dev = ["ipykernel>=6.25.1,<7"]

[tool.uv]

[[tool.uv.index]]
name = "PyPI"
url = "https://pypi.org/simple/"
default = true

[[tool.uv.index]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
default = true

[tool.hatch.build.targets.sdist]
include = ["core"]

[tool.hatch.build.targets.wheel]
include = ["core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
